# hackaton-2025

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/src/: main.py  schemas.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: a4901418eb77_002_add_user_type_fields.py
backend/src/api/: messages.py
backend/src/core/: config.py  deps.py  logging.py
backend/src/db/repositories/: channels.py  crud.py  messages.py
frontend_hackathon/: app.json  package-lock.json  package.json
frontend_hackathon/app/(tabs)/: _layout.tsx  index.tsx  map.tsx
frontend_hackathon/services/: LocationService.ts  constants.ts
src/: main.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 5c8fc2256a85_001_create_tables_users_channels_user_.py  ab615c9ab848_001_create_table_users.py
src/api/: __init__.py  channels.py  messages.py  users.py
src/core/: config.py
src/db/: base.py  enums.py  mixins.py  models.py
src/db/repositories/: channels.py  crud.py  users.py
src/utils/: message_validation.py
